// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout basic 1`] = `
<DocumentFragment>
  <div
    class="sc-pNWdM eAMRol"
    style="position: relative;"
  >
    <iframe
      style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
    />
    <div
      class="sc-jSFjdj cdvkCS"
    />
  </div>
</DocumentFragment>
`;

exports[`layout basic 2`] = `
<DocumentFragment>
  <div
    class="sc-pNWdM eAMRol"
    style="position: relative;"
  >
    <iframe
      style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
    />
    <div
      class="sc-jSFjdj cdvkCS"
    />
  </div>
</DocumentFragment>
`;

exports[`layout some text 1`] = `
<DocumentFragment>
  <div
    class="sc-pNWdM eAMRol"
    style="position: relative;"
  >
    <iframe
      style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
    />
    <div
      class="sc-jSFjdj cdvkCS"
    />
  </div>
</DocumentFragment>
`;

exports[`layout some text 2`] = `
<DocumentFragment>
  <div
    class="sc-pNWdM eAMRol"
    style="position: relative;"
  >
    <iframe
      style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
    />
    <div
      class="sc-jSFjdj cdvkCS"
    >
      <span>
        some text
      </span>
    </div>
  </div>
</DocumentFragment>
`;
